Working test comment

--- a/manifest.json
+++ b/manifest.json
@@ -8,6 +8,9 @@
     "tabs",
     "storage"
   ],
+  "host_permissions": [
+    "https://api.openai.com/*"
+  ],
   "action": {
     "default_popup": "popup.html",
     "default_icon": "ext-logo.png"
@@ -22,6 +25,10 @@
     {
       "matches": ["*://www.linkedin.com/feed/hashtag/*"],
       "js": ["content-script.js"]
+    },
+    {
+      "matches": ["*://www.linkedin.com/feed/*", "*://www.linkedin.com/posts/*"],
+      "js": ["comment-stats.js", "engagement-tracker.js", "content-analyzer.js", "status-display.js", "selector-utils.js", "debug-selectors.js", "auto-commenter.js", "test-positioning.js"]
     }
   ]
 }
